--- a/majorna.1
+++ b/majorna.1
@@ -856,300 +856,43 @@ foreground and background color.
 .PP
 \f[B]Note: Background colors will used until a reset sequence is
 found.\f[R]
-.SS FIFO
-Majorna has support for FIFO.
-This means you can tell Majorna to perform certain actions while it is
-running.
-Majorna checks the FIFO every 0.1 seconds.
-To use it, simply append a valid name to the FIFO file, which by default
-is /tmp/majorna.fifo.
+.SS Socket
+Majorna exposes its functions to external programs through a socket.
+You can use e.g.
+\f[CR]socat\f[R] to interact with it.
+The default file descriptor is \f[CR]/tmp/majorna.sock\f[R], and
+although it can be changed, it is highly recommended that you never do
+so.
 .PP
-You must append \f[B]without\f[R] a newline.
-Otherwise it will be considered invalid.
-It is recommended that you sleep for 0.1 seconds after appending to the
-file for performance reasons.
+Although the features available are quite basic, it is highly extendable
+and is now on par with what the old named pipe (FIFO) method offers.
 .PP
-.TS
-tab(@);
-lw(12.7n) lw(57.3n).
-T{
-Name
-T}@T{
-Description
-T}
-_
-T{
-drawmenu
-T}@T{
-Draw the menu
-T}
-T{
-match
-T}@T{
-Match entries again, useful if you\[cq]re loading items from file
-T}
-T{
-update
-T}@T{
-Match and then draw the menu.
-Both drawmenu and match one after another
-T}
-T{
-output
-T}@T{
-Output selected item text
-T}
-T{
-output_index
-T}@T{
-Output selected item index
-T}
-T{
-loadconfig
-T}@T{
-Reload config
-T}
-T{
-test
-T}@T{
-Print out `Test print' to standard output
-T}
-T{
-die
-T}@T{
-Print out `FIFO told me to die.' using the die() function
-T}
-T{
-toggleinput
-T}@T{
-Toggle input
-T}
-T{
-togglepretext
-T}@T{
-Toggle pretext
-T}
-T{
-togglelarrow
-T}@T{
-Toggle left arrow
-T}
-T{
-togglerarrow
-T}@T{
-Toggle right arrow
-T}
-T{
-toggleitem
-T}@T{
-Toggle item
-T}
-T{
-toggleprompt
-T}@T{
-Toggle prompt
-T}
-T{
-togglecaps
-T}@T{
-Toggle caps lock indicator
-T}
-T{
-togglepowerline
-T}@T{
-Toggle powerline
-T}
-T{
-togglecaret
-T}@T{
-Toggle caret
-T}
-T{
-togglehighlight
-T}@T{
-Toggle highlighting
-T}
-T{
-togglematchcount
-T}@T{
-Toggle match count
-T}
-T{
-togglemode
-T}@T{
-Toggle mode indicator
-T}
-T{
-toggleregex
-T}@T{
-Toggle regex
-T}
-T{
-togglefuzzy
-T}@T{
-Toggle fuzzy
-T}
-T{
-toggleimg
-T}@T{
-Toggle images
-T}
-T{
-toggleimgtype
-T}@T{
-Toggle image type
-T}
-T{
-screenshot
-T}@T{
-Screenshot Majorna
-T}
-T{
-setprofile
-T}@T{
-Open profile menu
-T}
-T{
-setlines+
-T}@T{
-Increase lines by 1
-T}
-T{
-setlines\-
-T}@T{
-Decrease lines by 1
-T}
-T{
-setcolumns+
-T}@T{
-Increase columns by 1
-T}
-T{
-setcolumns\-
-T}@T{
-Decrease columns by 1
-T}
-T{
-setx+
-T}@T{
-Increase X position by 1
-T}
-T{
-setx\-
-T}@T{
-Decrease X position by 1
-T}
-T{
-sety+
-T}@T{
-Increase Y position by 1
-T}
-T{
-sety\-
-T}@T{
-Decrease Y position by 1
-T}
-T{
-setw+
-T}@T{
-Increase width by 1
-T}
-T{
-setw\-
-T}@T{
-Decrease width by 1
-T}
-T{
-moveup
-T}@T{
-Move up one item
-T}
-T{
-movedown
-T}@T{
-Move down one item
-T}
-T{
-moveleft
-T}@T{
-Move left one item
-T}
-T{
-moveright
-T}@T{
-Move right one item
-T}
-T{
-movestart
-T}@T{
-Move to the start
-T}
-T{
-moveend
-T}@T{
-Move to the end
-T}
-T{
-movenext
-T}@T{
-Move to the next page
-T}
-T{
-moveprev
-T}@T{
-Move to the previous page
-T}
-T{
-moveword+
-T}@T{
-Move caret to the next word
-T}
-T{
-moveword\-
-T}@T{
-Move caret to the previous word
-T}
-T{
-movecaret+
-T}@T{
-Move caret to the next character
-T}
-T{
-movecaret\-
-T}@T{
-Move caret to the previous character
-T}
-T{
-clear
-T}@T{
-Clear input
-T}
-T{
-viewhist
-T}@T{
-View history buffer
-T}
-T{
-backspace
-T}@T{
-Backspace
-T}
-T{
-deleteword
-T}@T{
-Remove one full word forward
-T}
-T{
-exit_0
-T}@T{
-Exit with exit code 0
-T}
-T{
-exit_1
-T}@T{
-Exit with exit code 1
-T}
-.TE
+Bash example:
+.PP
+\f[CR]echo \[aq]{\[dq]calls\[dq]: [{\[dq]function\[dq]: \[dq]toggle_prompt\[dq]}]}\[aq] | socat \- UNIX\-CONNECT:/tmp/majorna.sock\f[R]
+.PP
+Python example:
+.IP
+.EX
+\f[B]import\f[R] socket
+\f[B]import\f[R] json
+
+data = {
+        \[dq]calls\[dq]: [
+            {\[dq]function\[dq]: \[dq]toggle_prompt\[dq]}
+        ]
+}
+
+json_data = json.dumps(data) + \[aq]\[rs]n\[aq]
+
+\f[B]with\f[R] socket.socket(socket.AF_UNIX, socket.SOCK_STREAM) \f[B]as\f[R] client_socket:
+    client_socket.connect(\[dq]/tmp/majorna.sock\[dq])
+    client_socket.sendall(json_data.encode(\[aq]utf\-8\[aq]))
+    response = client_socket.recv(1024)
+
+    \f[B]if\f[R] response:
+        print(response.decode(\[aq]utf\-8\[aq]))
+.EE
 .SS Pango markup and text formatting
 Because Majorna uses Pango and Cairo for text drawing, Pango markup can
 be used to format text and other elements.
